Fixed keep_alive value

--- a/src/templates/find-artist.html
+++ b/src/templates/find-artist.html
@@ -10,7 +10,7 @@
     <div class="container col-lg-8">
         <div style="padding-bottom: 10px">
             <div class="card text-center bg-light">
-			<font size="5"><b>DeepArtist Bot : I find artist from painting</b></font><br>
+			<font size="5"><b>DeepArtist Bot : I find artist from painting</b></font>
 			<font size="2"><b>Made with &#x1F496; by <a href="https://supratimh.github.io">Supratim Haldar</a></b></font>
                 <div class="card-body" style="padding-bottom: 10px">
                     <input class="card-title form-control" type="text" id="input" name="input" placeholder="Enter image url of jpeg or png file here"/>
@@ -25,7 +25,7 @@
 						<div class="item" id="api_output_1"></div><div class="item" id="api_output_2"></div><br><div class="item" id="api_output_3"></div>
                 </div>
 				<div class="card text-left bg-light" style="padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px">
-					<font size="4"><b><p align="center">Who am I?</p></b></font><br>
+					<font size="4"><b><p align="center">Who am I?</p></b></font>
 					<font size="3">
 					I am an AI bot, you can call me <i>DeepArtist</i>. Thanks to Deep Learning and a carefully designed Convolution Neural Network, I have thoroughly studied few paintings of the following legends, and understood their underlying styles.<br><br>
 					<ul>
